Fix lint target, gofmt hook, and remove untestable device flow scenario
- Makefile: make gofmt check fail when unformatted files exist
- prek.toml: use gofmt -w so prek detects file modifications and fails
- Remove device flow BDD scenario that accepted 502 from real Google
  endpoint (handler hardcodes google.Endpoint, can't mock without refactor)
- Format pre-existing unformatted files caught by the stricter lint

--- a/prek.toml
+++ b/prek.toml
@@ -3,5 +3,5 @@ repo = "local"
 hooks = [
   { id = "go-vet", name = "go vet", language = "system", entry = "go vet ./...", pass_filenames = false, types = ["go"] },
   { id = "go-test", name = "go test", language = "system", entry = "go test ./... -race -count=1", pass_filenames = false, types = ["go"] },
-  { id = "gofmt", name = "gofmt", language = "system", entry = "gofmt -l -d", types = ["go"] },
+  { id = "gofmt", name = "gofmt", language = "system", entry = "gofmt -w", types = ["go"] },
 ]
