--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -31,10 +31,6 @@ jobs:
     needs: check
     if: needs.check.outputs.has_changes == 'true'
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        goos: [linux, darwin]
-        goarch: [amd64, arm64]
     steps:
       - uses: actions/checkout@v4
 
@@ -42,22 +38,22 @@ jobs:
         with:
           go-version: "1.24"
 
-      - name: Build binaries
+      - name: Build linux/amd64 binaries
         env:
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
+          GOOS: linux
+          GOARCH: amd64
         run: |
           VERSION="nightly-$(date -u +%Y%m%d)"
           COMMIT="$(git rev-parse --short HEAD)"
           LDFLAGS="-X github.com/aspect-build/jingui/internal/version.Version=${VERSION} -X github.com/aspect-build/jingui/internal/version.GitCommit=${COMMIT}"
-          go build -ldflags "${LDFLAGS}" -o jingui-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/jingui
-          go build -ldflags "${LDFLAGS}" -o jingui-server-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/jingui-server
+          go build -ldflags "${LDFLAGS}" -o jingui-linux-amd64 ./cmd/jingui
+          go build -ldflags "${LDFLAGS}" -o jingui-server-linux-amd64 ./cmd/jingui-server
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: nightly-${{ matrix.goos }}-${{ matrix.goarch }}
+          name: nightly-linux-amd64
           path: |
-            jingui-${{ matrix.goos }}-${{ matrix.goarch }}
-            jingui-server-${{ matrix.goos }}-${{ matrix.goarch }}
+            jingui-linux-amd64
+            jingui-server-linux-amd64
           retention-days: 7
