--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,10 +11,6 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        goos: [linux, darwin]
-        goarch: [amd64, arm64]
     steps:
       - uses: actions/checkout@v4
 
@@ -22,24 +18,24 @@ jobs:
         with:
           go-version: "1.24"
 
-      - name: Build binaries
+      - name: Build linux/amd64 binaries
         env:
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
+          GOOS: linux
+          GOARCH: amd64
         run: |
           VERSION="${GITHUB_REF_NAME}"
           COMMIT="$(git rev-parse --short HEAD)"
           LDFLAGS="-X github.com/aspect-build/jingui/internal/version.Version=${VERSION} -X github.com/aspect-build/jingui/internal/version.GitCommit=${COMMIT}"
-          go build -ldflags "${LDFLAGS}" -o jingui-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/jingui
-          go build -ldflags "${LDFLAGS}" -o jingui-server-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/jingui-server
+          go build -ldflags "${LDFLAGS}" -o jingui-linux-amd64 ./cmd/jingui
+          go build -ldflags "${LDFLAGS}" -o jingui-server-linux-amd64 ./cmd/jingui-server
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: binaries-${{ matrix.goos }}-${{ matrix.goarch }}
+          name: binaries-linux-amd64
           path: |
-            jingui-${{ matrix.goos }}-${{ matrix.goarch }}
-            jingui-server-${{ matrix.goos }}-${{ matrix.goarch }}
+            jingui-linux-amd64
+            jingui-server-linux-amd64
 
   publish:
     needs: release
@@ -111,7 +107,7 @@ jobs:
         with:
           context: .
           target: server
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta-server.outputs.tags }}
           labels: ${{ steps.meta-server.outputs.labels }}
@@ -134,7 +130,7 @@ jobs:
         with:
           context: .
           target: client
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta-client.outputs.tags }}
           labels: ${{ steps.meta-client.outputs.labels }}
