--- a/.github/workflows/release-command.yml
+++ b/.github/workflows/release-command.yml
@@ -143,6 +143,18 @@ jobs:
         with:
           go-version: "1.24"
 
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Build dcap-qvl static library
+        run: |
+          git clone https://github.com/Phala-Network/dcap-qvl.git /tmp/dcap-qvl
+          cd /tmp/dcap-qvl
+          git checkout c201e5e2b312
+          cargo build --release --features go
+          echo "CGO_ENABLED=1" >> "$GITHUB_ENV"
+          echo "CGO_LDFLAGS=-L/tmp/dcap-qvl/target/release" >> "$GITHUB_ENV"
+
       # ── CI gate ──────────────────────────────────────────────────────
       - name: Go vet
         run: go vet ./...
@@ -152,6 +164,11 @@ jobs:
 
       - name: BDD tests
         run: go test -tags bdd ./... -v
+
+      - name: RA-TLS build sanity check
+        run: |
+          go build -tags ratls ./cmd/jingui
+          go build -tags ratls ./cmd/jingui-server
 
       # ── Version bump ─────────────────────────────────────────────────
       - name: Determine version
@@ -163,16 +180,16 @@ jobs:
           echo "Resolved version: ${NEW_VERSION}"
 
       # ── Cross-compile ────────────────────────────────────────────────
-      - name: Build linux/amd64 binaries
+      - name: Build linux/amd64 binaries (RA-TLS)
         run: |
           VERSION="${{ steps.version.outputs.version }}"
           COMMIT="$(git rev-parse --short HEAD)"
           LDFLAGS="-X github.com/aspect-build/jingui/internal/version.Version=${VERSION} -X github.com/aspect-build/jingui/internal/version.GitCommit=${COMMIT}"
 
-          echo "Building linux/amd64..."
-          GOOS=linux GOARCH=amd64 go build -ldflags "${LDFLAGS}" \
+          echo "Building linux/amd64 with -tags ratls..."
+          GOOS=linux GOARCH=amd64 go build -tags ratls -ldflags "${LDFLAGS}" \
             -o "dist/jingui-linux-amd64" ./cmd/jingui
-          GOOS=linux GOARCH=amd64 go build -ldflags "${LDFLAGS}" \
+          GOOS=linux GOARCH=amd64 go build -tags ratls -ldflags "${LDFLAGS}" \
             -o "dist/jingui-server-linux-amd64" ./cmd/jingui-server
 
           echo "Built binaries:"
@@ -324,6 +341,8 @@ jobs:
           build-args: |
             VERSION=${{ needs.release.outputs.version }}
             COMMIT=${{ github.sha }}
+            GO_TAGS=ratls
+            DCAP_QVL_REF=c201e5e2b312
 
       - name: Docker metadata (client)
         id: meta-client
@@ -346,3 +365,5 @@ jobs:
           build-args: |
             VERSION=${{ needs.release.outputs.version }}
             COMMIT=${{ github.sha }}
+            GO_TAGS=ratls
+            DCAP_QVL_REF=c201e5e2b312
