--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,18 @@ jobs:
         with:
           go-version: "1.24"
 
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Build dcap-qvl static library
+        run: |
+          git clone https://github.com/Phala-Network/dcap-qvl.git /tmp/dcap-qvl
+          cd /tmp/dcap-qvl
+          git checkout c201e5e2b312
+          cargo build --release --features go
+          echo "CGO_ENABLED=1" >> "$GITHUB_ENV"
+          echo "CGO_LDFLAGS=-L/tmp/dcap-qvl/target/release" >> "$GITHUB_ENV"
+
       - name: Go vet
         run: go vet ./...
 
