--- a/.github/workflows/release-command.yml
+++ b/.github/workflows/release-command.yml
@@ -41,6 +41,7 @@ jobs:
       pr_number: ${{ steps.parse.outputs.pr_number }}
       head_ref: ${{ steps.pr.outputs.head_ref }}
       requested_by: ${{ steps.parse.outputs.requested_by }}
+      comment_id: ${{ steps.progress_comment.outputs.comment_id }}
     steps:
       - name: Parse command
         id: parse
@@ -111,6 +112,27 @@ jobs:
               comment_id: context.payload.comment.id,
               content: 'eyes',
             });
+
+      - name: Post progress comment
+        id: progress_comment
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const prerelease = '${{ steps.parse.outputs.prerelease }}';
+            const body = [
+              '### ⏳ Release in progress…',
+              '',
+              `**Type:** \`${{ steps.parse.outputs.release_type }}\`${prerelease ? ' `' + prerelease + '`' : ''}`,
+              `**Requested by:** @${{ steps.parse.outputs.requested_by }}`,
+              `**Workflow:** [Run #${process.env.GITHUB_RUN_NUMBER}](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID})`,
+            ].join('\n');
+            const { data: comment } = await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: ${{ steps.parse.outputs.pr_number }},
+              body,
+            });
+            core.setOutput('comment_id', comment.id);
 
       - name: Get PR head ref
         id: pr
@@ -220,7 +242,7 @@ jobs:
           generate_release_notes: true
 
       # ── Status comments + reactions ──────────────────────────────────
-      - name: Comment success on PR
+      - name: Update comment — release success
         if: success()
         uses: actions/github-script@v7
         with:
@@ -233,18 +255,21 @@ jobs:
             ];
             const assetList = assets.map(a => `- \`${a}\``).join('\n');
             const body = [
-              `### Released ${version}`,
+              `### ✅ Released ${version}`,
               '',
               `**Release:** ${releaseUrl}`,
               `**Requested by:** @${{ needs.parse.outputs.requested_by }}`,
               '',
               '**Assets:**',
               assetList,
+              '',
+              '---',
+              '⏳ Docker images publishing…',
             ].join('\n');
-            await github.rest.issues.createComment({
+            await github.rest.issues.updateComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: ${{ needs.parse.outputs.pr_number }},
+              comment_id: ${{ needs.parse.outputs.comment_id }},
               body,
             });
 
@@ -260,23 +285,24 @@ jobs:
               content: 'rocket',
             });
 
-      - name: Comment failure on PR
+      - name: Update comment — release failure
         if: failure()
         uses: actions/github-script@v7
         with:
           script: |
+            const prerelease = '${{ needs.parse.outputs.prerelease }}';
             const body = [
-              '### Release failed',
+              '### ❌ Release failed',
               '',
               `**Requested by:** @${{ needs.parse.outputs.requested_by }}`,
-              `**Type:** ${{ needs.parse.outputs.release_type }} ${{ needs.parse.outputs.prerelease }}`,
+              `**Type:** \`${{ needs.parse.outputs.release_type }}\`${prerelease ? ' `' + prerelease + '`' : ''}`,
               '',
               `See the [workflow run](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}) for details.`,
             ].join('\n');
-            await github.rest.issues.createComment({
+            await github.rest.issues.updateComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: ${{ needs.parse.outputs.pr_number }},
+              comment_id: ${{ needs.parse.outputs.comment_id }},
               body,
             });
 
@@ -325,6 +351,7 @@ jobs:
             type=raw,value=latest,enable=${{ needs.parse.outputs.prerelease == '' }}
 
       - name: Build and push server image
+        id: push-server
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -348,6 +375,7 @@ jobs:
             type=raw,value=latest,enable=${{ needs.parse.outputs.prerelease == '' }}
 
       - name: Build and push client image
+        id: push-client
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -360,3 +388,51 @@ jobs:
             VERSION=${{ needs.release.outputs.version }}
             COMMIT=${{ github.sha }}
             DCAP_QVL_REF=c201e5e2b312
+
+      # ── Update progress comment ──────────────────────────────────────
+      - name: Update comment — docker success
+        if: success()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const version = '${{ needs.release.outputs.version }}';
+            const serverImage = `ghcr.io/${{ github.repository }}-server:${version}@${{ steps.push-server.outputs.digest }}`;
+            const clientImage = `ghcr.io/${{ github.repository }}:${version}@${{ steps.push-client.outputs.digest }}`;
+            const body = [
+              `### ✅ Released ${version}`,
+              '',
+              `**Requested by:** @${{ needs.parse.outputs.requested_by }}`,
+              '',
+              '**Docker images:**',
+              '```',
+              serverImage,
+              clientImage,
+              '```',
+            ].join('\n');
+            await github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: ${{ needs.parse.outputs.comment_id }},
+              body,
+            });
+
+      - name: Update comment — docker failure
+        if: failure()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const version = '${{ needs.release.outputs.version }}';
+            const body = [
+              `### ✅ Released ${version}`,
+              '',
+              `**Requested by:** @${{ needs.parse.outputs.requested_by }}`,
+              '',
+              '---',
+              `❌ Docker image publish failed. See the [workflow run](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}) for details.`,
+            ].join('\n');
+            await github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: ${{ needs.parse.outputs.comment_id }},
+              body,
+            });
