--- a/.github/workflows/release-command.yml
+++ b/.github/workflows/release-command.yml
@@ -3,22 +3,6 @@ name: Release Command
 on:
   issue_comment:
     types: [created]
-  workflow_dispatch:
-    inputs:
-      release_type:
-        description: "Bump type: major, minor, or patch"
-        required: true
-        type: choice
-        options: [patch, minor, major]
-      prerelease:
-        description: "Prerelease label (optional): alpha, beta, or rc"
-        required: false
-        type: choice
-        options: ["", alpha, beta, rc]
-      pr_number:
-        description: "PR number to release from"
-        required: true
-        type: number
 
 permissions:
   contents: write
@@ -31,10 +15,8 @@ jobs:
   parse:
     runs-on: ubuntu-latest
     if: >-
-      (github.event_name == 'workflow_dispatch') ||
-      (github.event_name == 'issue_comment'
-       && github.event.issue.pull_request
-       && startsWith(github.event.comment.body, '!release '))
+      github.event.issue.pull_request
+      && startsWith(github.event.comment.body, '!release ')
     outputs:
       release_type: ${{ steps.parse.outputs.release_type }}
       prerelease: ${{ steps.parse.outputs.prerelease }}
@@ -50,26 +32,18 @@ jobs:
           script: |
             const validTypes = ['major', 'minor', 'patch'];
             const validPre = ['alpha', 'beta', 'rc'];
-            let releaseType, prerelease, prNumber, requestedBy;
 
-            if (context.eventName === 'workflow_dispatch') {
-              releaseType = '${{ inputs.release_type }}';
-              prerelease = '${{ inputs.prerelease }}';
-              prNumber = '${{ inputs.pr_number }}';
-              requestedBy = context.actor;
-            } else {
-              // Parse "!release <type> [prerelease]"
-              const body = context.payload.comment.body.trim();
-              const match = body.match(/^!release\s+(major|minor|patch)(?:\s+(alpha|beta|rc))?\s*$/);
-              if (!match) {
-                core.setFailed(`Invalid command: "${body}". Usage: !release <major|minor|patch> [alpha|beta|rc]`);
-                return;
-              }
-              releaseType = match[1];
-              prerelease = match[2] || '';
-              prNumber = context.issue.number;
-              requestedBy = context.payload.comment.user.login;
+            // Parse "!release <type> [prerelease]"
+            const body = context.payload.comment.body.trim();
+            const match = body.match(/^!release\s+(major|minor|patch)(?:\s+(alpha|beta|rc))?\s*$/);
+            if (!match) {
+              core.setFailed(`Invalid command: "${body}". Usage: !release <major|minor|patch> [alpha|beta|rc]`);
+              return;
             }
+            const releaseType = match[1];
+            const prerelease = match[2] || '';
+            const prNumber = context.issue.number;
+            const requestedBy = context.payload.comment.user.login;
 
             if (!validTypes.includes(releaseType)) {
               core.setFailed(`Invalid release type: ${releaseType}`);
@@ -86,7 +60,6 @@ jobs:
             core.setOutput('requested_by', requestedBy);
 
       - name: Check permissions
-        if: github.event_name == 'issue_comment'
         uses: actions/github-script@v7
         with:
           script: |
@@ -102,7 +75,6 @@ jobs:
             }
 
       - name: React with eyes
-        if: github.event_name == 'issue_comment'
         uses: actions/github-script@v7
         with:
           script: |
@@ -274,7 +246,7 @@ jobs:
             });
 
       - name: React with rocket on success
-        if: success() && github.event_name == 'issue_comment'
+        if: success()
         uses: actions/github-script@v7
         with:
           script: |
@@ -307,7 +279,7 @@ jobs:
             });
 
       - name: React with X on failure
-        if: failure() && github.event_name == 'issue_comment'
+        if: failure()
         uses: actions/github-script@v7
         with:
           script: |
